Fix dashboard on iPhone

--- a/app/assets/stylesheets/default.css.sass
+++ b/app/assets/stylesheets/default.css.sass
@@ -22,6 +22,7 @@ a, p, input, textarea, h1, h2, h3, h4, h5, h6, ol, ul, li, div, section, nav
 
 html
   height: 100%
+  overflow-x: hidden
   overflow-y: scroll
   -webkit-text-size-adjust: auto
 
