--- a/app/assets/stylesheets/themes/_application.css.sass
+++ b/app/assets/stylesheets/themes/_application.css.sass
@@ -9,7 +9,6 @@ html, body
     family: sans-serif
     size: $font-size
   height: 100%
-  overflow-x: hidden
 
 input
   &[type=radio]
